[project]
name = "triton-pretask"
version = "0.1.0"
description = "Triton pretask for PLCT."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.1.3",
    "pandas>=2.2.3",
    "rich>=13.9.4",
    "setuptools>=75.5.0",
    "torch>=2.5.1",
    "triton>=3.1.0",
    "matplotlib>=3.9.2",
    "pytest>=8.3.3",
    "tqdm>=4.67.0",
]
tool.uv.package = false

[tool.uv]
index-url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple"

[tool.pytest.ini_options]
python_files = ["test_*.py"]
python_classes = ["Test*", "*Test"]
python_functions = ["test_*"]

addopts = [
    "--verbose",           
    "--capture=no",        
    "--exitfirst",
    "--showlocals",
    "--durations=5",
    "--tb=short", 
]

testpaths = ["Triton"]
